@@ -36,13 +36,14 @@ static const struct option longopts[] = {
 	{ "capabilities", no_argument, NULL, 'p' }, ///< Show the capabilities the OBD device claims it can report
 	{ "no-autotrip", no_argument, NULL, 'n' }, ///< Disable automatic trip starting and stopping
 	{ "spam-stdout", no_argument, NULL, 't' }, ///< Spam readings to stdout
+	{ "serial-log", required_argument, NULL, 'l' }, ///< Log serial port data transfer
 	{ "enable-optimisations", no_argument, NULL, 'o' }, ///< Enable elm optimisations
 	{ "db", required_argument, NULL, 'd' }, ///< Database file
 	{ NULL, 0, NULL, 0 } ///< End
 };
 
 /// getopt() short options
-static const char shortopts[] = "htnvs:d:c:a:op";
+static const char shortopts[] = "htnvs:d:l:c:a:op";
 
 /// Print Help for --help
 /** \param argv0 your program's argv[0]
