@@ -1,5 +1,7 @@
 Version 0.6
  Move obdlogger source into its own subdir
+ logger optimisation: remove all spaces in obd streams
+ logger: add a serial port communications log
 
 Version 0.5 (released 2009-05-22)
  Move common obdinfo into its own library
